Add support for Run logs
