# dixatestplatform/chaos-controller/api/openapi.yaml
@@ -262,6 +262,35 @@ paths:
       tags:
       - runs
       x-eov-operation-handler: controllers/RunsController
+  /run/{id}/log:
+    post:
+      operationId: appendLog
+      parameters:
+      - description: ID of a Run
+        example: e0064a57-b327-4f77-82d7-8042911613e8
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LogEntry'
+        description: Append log entry to Run
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+        "400":
+          description: Invalid inputs
+      summary: Append log entry to Run
+      tags:
+      - runs
+      x-eov-operation-handler: controllers/RunsController
 components:
   schemas:
     Test:
@@ -318,13 +347,20 @@ components:
         created_at: 2017-07-21T17:32:28Z
         testId: e0064a57-b327-4f77-82d7-8042911613e8
         id: e0064a57-b327-4f77-82d7-8042911613e8
+        logs:
+        - severity: INFO
+          message: message
+          timestamp: timestamp
+        - severity: INFO
+          message: message
+          timestamp: timestamp
         results:
           downstreamService:
             name: conversation-service
-            logs: logs
+            logDump: logDump
           upstreamService:
             name: conversation-service
-            logs: logs
+            logDump: logDump
           status: PASS
         status: scheduled
       properties:
@@ -342,12 +378,17 @@ components:
           - scheduled
           - running
           - stopped
+          - crashed
           - completed
           type: string
         created_at:
           example: 2017-07-21T17:32:28Z
           format: date-time
           type: string
+        logs:
+          items:
+            $ref: '#/components/schemas/LogEntry'
+          type: array
         results:
           $ref: '#/components/schemas/Run_results'
         mode:
@@ -359,6 +400,22 @@ components:
       items:
         $ref: '#/components/schemas/Run'
       type: array
+    LogEntry:
+      example:
+        severity: INFO
+        message: message
+        timestamp: timestamp
+      properties:
+        severity:
+          enum:
+          - INFO
+          - FATAL
+          type: string
+        message:
+          type: string
+        timestamp:
+          type: string
+      type: object
     istio.networking.v1alpha3.HTTPFaultInjection:
       description: HTTPFaultInjection can be used to specify one or more faults to
         inject while forwarding HTTP requests to the destination specified in a route.
@@ -478,22 +535,22 @@ components:
     Run_results_upstreamService:
       example:
         name: conversation-service
-        logs: logs
+        logDump: logDump
       properties:
         name:
           example: conversation-service
           type: string
-        logs:
+        logDump:
           type: string
       type: object
     Run_results:
       example:
         downstreamService:
           name: conversation-service
-          logs: logs
+          logDump: logDump
         upstreamService:
           name: conversation-service
-          logs: logs
+          logDump: logDump
         status: PASS
       properties:
         status:
